<package format="2">
  <name>jackal_nav_sim</name>
  <version>0.0.1</version>
  <description>Jackal navigation simulation package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>jackal_navigation</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>jackal_navigation</exec_depend>
  <exec_depend>jackal_gazebo</exec_depend>
  <exec_depend>jackal_viz</exec_depend>
</package>
